@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Animal {
        - name : String
        - nameMaster : String
        - race : String
        + Animal()
        + Animal()
        + getAnimalObj()
        + getEspeseInfo()
        + getEspeseObj()
        + getName()
        + getNameMaster()
        + getRace()
        + getSuivi()
        + printAnimal()
        + setEspeseObj()
        + setName()
        + setNameMaster()
        + setRace()
        + setSuivi()
        + test()
    }
  }
  

  namespace  {
    class CabinnetVeterinaireImpl {
        - patients : List<IAnimal>
        - runningClients : List<IDistributedClient>
        + CabinnetVeterinaireImpl()
        + CabinnetVeterinaireImpl()
        + addPatient()
        + bindClientToCabinet()
        + deletePatient()
        + getCurrentPatientNumber()
        + searchAllAnimal()
        + searchAllAnimal()
        + sendAlert()
        + unbindClientToCabinet()
        - searchAllAnimalOfName()
        - searchAnimalByFullName()
    }
  }
  

  namespace  {
    class Server {
        + Server()
        {static} + main()
    }
  }
  

  namespace  {
    class SuiviAnimal {
        - suivi : String
        + SuiviAnimal()
        + SuiviAnimal()
        + getSuivi()
        + setSuivi()
    }
  }
  

  Animal .up.|> IAnimal
  Animal -up-|> java.rmi.server.UnicastRemoteObject
  Animal o-- Espece : specie
  Animal o-- SuiviAnimal : suiviAnimal
  CabinnetVeterinaireImpl .up.|> ICabinetVeterinaire
  CabinnetVeterinaireImpl -up-|> java.rmi.server.UnicastRemoteObject
  SuiviAnimal .up.|> ISuiviAnimal
  SuiviAnimal -up-|> java.rmi.server.UnicastRemoteObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
